5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/4482/executions/1716_2496.log
== SUBMITION (2019-05-14 17:21:49) 
-- CODE:
x = int(input("digiteum numero: "))
y = 0

while x ! = -1 :
	y = y + x
	x = int(input("digite outro numero: "))
	print(y)
-- EXECUTION TIME:
0.137226
-- ERROR:
  File "/home/codebench/codes/1716/2496/main.py", line 4
    while x ! = -1 :
            ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-14 17:21:58) 
-- CODE:
x = int(input("digiteum numero: "))
y = 0

while x ! = -1 :
	y = y + x
	x = int(input("digite outro numero: "))

	print(y)
-- EXECUTION TIME:
0.219675
-- ERROR:
  File "/home/codebench/codes/1716/2496/main.py", line 4
    while x ! = -1 :
            ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 17:22:05) 
-- CODE:
x = int(input("digiteum numero: "))
y = 0

while x ! = -1 :
	y = y + x
	x = int(input("digite outro numero: "))

print(y)
-- ERROR:
File "XXXX", line 4
    while x ! = -1 :
            ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 17:22:26) 
-- CODE:
x = int(input("digiteum numero: "))
y = 0

while x!=-1 :
	y = y + x
	x = int(input("digite outro numero: "))

print(y)
-- OUTPUT:
874
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 17:22:32) 
-- CODE:
x = int(input("digite um numero: "))
y = 0

while x!=-1 :
	y = y + x
	x = int(input("digite outro numero: "))

print(y)
-- OUTPUT:
874
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-14 17:22:47) 
-- CODE:
x = int(input("digite um numero: "))
y = 0

while x!=-1 :
	y = y + x
	x = int(input("digite outro numero: "))

print(y)
-- EXECUTION TIME:
0.188026
-- TEST CASE 1:
---- input:
-525
1075
333
-9
-1

---- correct output:
874
---- user output:
874
-- TEST CASE 2:
---- input:
0
0
0
0
0
0
0
-1
---- correct output:
0
---- user output:
0
-- TEST CASE 3:
---- input:
10953
32653
-10953
-1
---- correct output:
32653
---- user output:
32653
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
